--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                 margin: 1%;
                 padding: 2%;
                 text-align: center;
+		padding-bottom: 1%;
             }
 
             .poze {
