--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <img class="poza1" src="img4.jpg" alt="Image 4">
         <img class="poza1" src="img5.jpg" alt="Image 5">
         <img class="poza1" src="img6.jpg" alt="Image 6">
-        <img class="poza1" src="img7.jpg" alt="Image 7">
+        <img class="poza1" src="img7.JPG" alt="Image 7">
         <img class="poza1" src="img8.JPG" alt="Image 8">
         <img class="poza1" src="img9.JPG" alt="Image 9">
         <img class="poza1" src="img10.JPG" alt="Image 10">
