--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         /* Apply original float-based layout for larger screens */
         @media (min-width: 1025px) {
             .container {
+		padding-left: 5%;
                 display: block; /* Revert to block layout */
             }
 
