--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
         /* Apply original float-based layout for larger screens */
         @media (min-width: 1025px) {
             .container {
-		padding-left: 5%;
                 display: block; /* Revert to block layout */
             }
 
-            p {
+            p { 
+		margin-left: 10%;
                 float: left;
                 width: 27%; /* Increase width for larger boxes */
                 margin: 1%;
