--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             background-color: #fed9b7;
             border-radius: 30px;
             opacity: 70%;
-            padding: 30px;
+            padding: 20px;
             margin: 10px;
             text-align: center;
             transition: opacity 0.7s ease;
@@ -125,12 +125,11 @@
                 display: block; /* Revert to block layout */
             }
 
-            p { 
-		margin-left: 10%;
+            p {
                 float: left;
                 width: 27%; /* Increase width for larger boxes */
                 margin: 1%;
-                padding: 7%;
+                padding: 2%;
                 text-align: center;
             }
 
@@ -181,7 +180,7 @@
         <img class="poza1" src="img4.jpg" alt="Image 4">
         <img class="poza1" src="img5.jpg" alt="Image 5">
         <img class="poza1" src="img6.jpg" alt="Image 6">
-        <img class="poza1" src="img7.JPG" alt="Image 7">
+        <img class="poza1" src="img7.jpg" alt="Image 7">
         <img class="poza1" src="img8.JPG" alt="Image 8">
         <img class="poza1" src="img9.JPG" alt="Image 9">
         <img class="poza1" src="img10.JPG" alt="Image 10">
