--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 float: left;
                 width: 27%; /* Increase width for larger boxes */
                 margin: 1%;
-                padding: 2%;
+                padding: 0%;
                 text-align: center;
             }
 
@@ -170,7 +170,7 @@
             Daca ma iei de sot vom putea dormi impreuna pentru totdeauna, vom putea gati impreuna, vom face multi multi bebe, vom face baita impreuna si ne vom petrece tot restul vietii impreuna<img src="img1.JPG" alt="Image 1">
         </p>
 
-        <p style="padding-top: 57px; padding-bottom: 109px;"><b>Fun Facts</b><br>
+        <p style="padding-top: 57px; padding-bottom: 109px; padding: 2%;"><b>Fun Facts</b><br>
             Pe Gabi o cheama Gabi, o va chema Domnisoara Doctor Bobeica Gabriela. Este nascuta pe 26 octombrie 2006. Poarta la inel marimea 52. Pe data de 9 august 2023 la ora 23 ne-am cunoscut, pe data de 29 august a realizat ca ma place, doamne ce noroc pe mine, pe data de 24 octombrie mi a spus ca ma iubeste si pe 28 octombrie ne-am oficializat relatia. Poreclele: zana mea, dragostea mea, sufletul meu, unicornul, delfino, iubire, iubita mea, frumoaso, sotia mea, femeia mea, rapanoaso, paduchioaso. Acum pe o nota serioasa iubire, te iubesc din tot sufletul meu, tu esti totul meu, viitorul meu, esti tot ce mi-am dorit vreodata.<img src="img3.JPG" alt="Image 3">
         </p>
     </div>
