--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 
         <p style="padding-top: 60px; padding-bottom: 90px;"><b>O sa dormim impreuna pentru totdeauna</b><br>
-            Daca ma iei de sot vom putea dormi impreuna pentru totdeauna, vom putea gati impreuna, vom face multi multi bebe, vom face baita impreuna si ne vom petrece tot restul vietii impreuna<img src="img1.JPG" alt="Image 1">
+            Daca ma iei de sot vom putea dormi impreuna pentru totdeauna, vom putea gati impreuna, vom face multi multi bebe, vom face curat impreuna si ne vom petrece tot restul vietii impreuna, nu mai scapi de mine!!!<img src="img1.JPG" alt="Image 1">
         </p>
 
         <p style="padding-top: 57px; padding-bottom: 109px;"><b>Fun Facts</b><br>
