--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Te iubesc!</title>
     <style>
         body {
-            background-color: #fdfcdc;
+            background-color: #e1cbcb;
             margin: 0;
             font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
 
         h1, h2 {
             text-align: center;
-            color: #0081a7;
+            color: #7D1717;
         }
 
         h1 {
@@ -35,8 +35,8 @@
         p {
             width: 100%;
             max-width: 400px; /* Increased max-width for larger screens */
-            color: #0081a7;
-            background-color: #fed9b7;
+            color: #7D1717;
+            background-color: #E09E9E;
             border-radius: 30px;
             opacity: 70%;
             padding: 20px;
